@@ -31,108 +31,132 @@
 
 static struct {
   UINT8 sndCmd;
-  UINT8 msmData;
-  int clockDiv;
-  UINT8 vector;
-  int irqs[3];
+  int clockDiv, initDone, fifoSize, timerCnt, trg3;
+  UINT8 fifo[16];
 } sndlocals;
 
+void ctc_interrupt_0(int state);
+void ctc_interrupt_1(int state);
+/*
 WRITE_HANDLER(zc0_0_w) {
+  // resets CA of HC4066 chip
+}
+WRITE_HANDLER(zc1_0_w) {
+  // sets CKA of 1st MF10 chip
+}
+*/
+WRITE_HANDLER(zc2_0_w) {
   if (data) {
-    z80ctc_0_trg0_w(0, 1);
-    z80ctc_0_trg0_w(0, 0);
+    sndlocals.timerCnt = sndlocals.trg3 = 0;
+    z80ctc_0_trg3_w(0, sndlocals.fifoSize > 0);
   }
 }
-
-WRITE_HANDLER(zc1_0_w) {
-//  printf("zc1_0_w: %d\n", data);
-}
-
-WRITE_HANDLER(zc2_0_w) {
-//  printf("zc2_0_w: %d\n", data);
-}
-
+/*
 WRITE_HANDLER(zc0_1_w) {
-//  printf("zc0_1_w: %d\n", data);
+  // sets CKB of 1st MF10 chip
 }
-
 WRITE_HANDLER(zc1_1_w) {
-//  printf("zc1_1_w: %d\n", data);
+  // sets CKA of 2nd MF10 chip
 }
-
 WRITE_HANDLER(zc2_1_w) {
-//  printf("zc2_1_w: %d\n", data);
+  // sets CKB of 2nd MF10 chip
 }
-
-void ctc_interrupt_0(int state) {
-  sndlocals.irqs[0] = state;
-  sndlocals.vector = Z80_VECTOR(0, state);
-  logerror("ctc_irq_0: %d %02x\n", state, sndlocals.vector);
-//  if (!sndlocals.vector) sndlocals.vector = 0xff;
-  cpu_set_irq_line_and_vector(1, 0, state, sndlocals.vector);
-}
-
-void ctc_interrupt_1(int state) {
-  sndlocals.irqs[1] = state;
-  logerror("ctc_irq_1: %d %02x\n", state, sndlocals.vector);
-  sndlocals.vector = 0xf6;
-  cpu_set_irq_line_and_vector(1, 0, state, sndlocals.vector);
-}
-
+*/
 static z80ctc_interface ctc_intf = {
   2,
   { 4000000, 4000000 },
   { 0, 0 },
   { ctc_interrupt_0, ctc_interrupt_1 },
-  { zc0_0_w, zc0_1_w },
-  { zc1_0_w, zc1_1_w },
-  { zc2_0_w, zc2_1_w }
+  { 0 /*zc0_0_w*/, 0 /*zc0_1_w*/ },
+  { 0 /*zc1_0_w*/, 0 /*zc1_1_w*/ },
+  { zc2_0_w, 0 /*zc2_1_w*/ }
 };
 
-/*static void clock_pulse(int dummy) {
-  static int mod2, modDiv, mod32;
-  z80ctc_0_trg1_w(0, 1); // 2 MHz
-  z80ctc_0_trg1_w(0, 0);
-  z80ctc_0_trg2_w(0, modDiv >= sndlocals.clockDiv); // 250 kHz, 500 hHz, or 1 MHz
-  modDiv = (modDiv + 1) % (2 * sndlocals.clockDiv);
-  z80ctc_0_trg3_w(0, mod32 > 31); // 31.25 kHz
-  mod32 = (mod32 + 1) % 64;
-  z80ctc_1_trg0_w(0, mod2); // 1 MHz
-  z80ctc_1_trg1_w(0, mod2);
-  z80ctc_1_trg2_w(0, mod2);
-  mod2 = (mod2 + 1) % 2;
-}*/
+static void init(void) {
+  if (!sndlocals.initDone) {
+    memset(&sndlocals, 0x00, sizeof(sndlocals));
+    sndlocals.initDone = 1;
+    sndlocals.clockDiv = 1;
+    sndlocals.sndCmd = 0xff; // pulled high if no data present
+    z80ctc_init(&ctc_intf);
+  }
+}
+
+void ctc_interrupt_0(int state) {
+  init();
+// TODO: find out why sound stops altogether once a sample is played
+#ifdef MAME_DEBUG
+  cpu_set_irq_line_and_vector(1, 0, state, Z80_VECTOR(1, state));
+#endif
+}
+
+void ctc_interrupt_1(int state) {
+  init();
+  cpu_set_irq_line_and_vector(1, 0, state, Z80_VECTOR(0, state));
+}
+
+static void shi(UINT8 data) {
+  int i;
+  if (sndlocals.fifoSize < 16) sndlocals.fifoSize++;
+  for (i = sndlocals.fifoSize - 1; i > 0; i--) sndlocals.fifo[i] = sndlocals.fifo[i-1];
+  sndlocals.fifo[0] = data;
+}
+
+static UINT8 sho(void) {
+  if (sndlocals.fifoSize) sndlocals.fifoSize--;
+  return sndlocals.fifo[sndlocals.fifoSize];
+}
+
+static void clock_pulse(int dummy) {
+  static UINT8 msmData;
+  z80ctc_0_trg2_w(0, !(sndlocals.timerCnt % sndlocals.clockDiv)); // controls data fetch rate to MSM chip
+  z80ctc_0_trg2_w(0, 0);
+  sndlocals.trg3 = sndlocals.timerCnt > 3;
+  z80ctc_0_trg3_w(0, sndlocals.fifoSize || sndlocals.trg3);
+  if (sndlocals.timerCnt == 4) msmData = sho();
+  if (sndlocals.fifoSize && sndlocals.timerCnt == 64) {
+    MSM5205_data_w(0, msmData);
+    MSM5205_vclk_w(0, 1);
+    MSM5205_vclk_w(0, 0);
+  }
+  sndlocals.timerCnt++;
+}
 
 static void zsu_init(struct sndbrdData *brdData) {
-  memset(&sndlocals, 0, sizeof sndlocals);
-  sndlocals.vector = 0xff;
-  cpu_irq_line_vector_w(1, 0, sndlocals.vector);
-  sndlocals.sndCmd = 0xff; // pulled high if no data present
-  sndlocals.clockDiv = 4;
+  init();
   z80ctc_init(&ctc_intf);
-//  timer_pulse(TIME_IN_HZ(2000000),0,clock_pulse);
+  timer_pulse(TIME_IN_HZ(1000000),0,clock_pulse);
 }
 
 static WRITE_HANDLER(zsu_data_w) {
   logerror("--> SND CMD: %02x\n", data);
   sndlocals.sndCmd = data;
-  sndlocals.irqs[2] = 1;
-  sndlocals.vector = 0xff;
-	cpu_set_irq_line_and_vector(1, 0, HOLD_LINE, sndlocals.vector);
+  cpu_set_irq_line_and_vector(1, 0, ASSERT_LINE, 0xff);
 }
 
 const struct sndbrdIntf zsuIntf = {
   "ZSU", zsu_init, NULL, NULL, zsu_data_w, zsu_data_w, NULL, NULL, NULL, SNDBRD_NODATASYNC|SNDBRD_NOCTRLSYNC
 };
 
-static WRITE_HANDLER(ay8910_0_a_w)	{
-  logerror("BANK: %x\n", data & 3);
-  cpu_setbank(1, memory_region(REGION_USER1) + 0x8000 * (data & 3));
+static WRITE_HANDLER(ay8910_0_a_w) {
+  static int bank;
+  if ((data & 3) != bank) {
+    bank = data & 3;
+    logerror("BANK: %x\n", bank);
+    cpu_setbank(1, memory_region(REGION_USER1) + 0x8000 * bank);
+  }
 }
 
-static WRITE_HANDLER(ay8910_1_a_w)	{
-  logerror("SPEED: %x\n", data >> 4);
+static WRITE_HANDLER(ay8910_1_a_w) {
+  static UINT8 old;
+  if (old != data) logerror("MSM %d, SPEED: %x\n", !GET_BIT0, data >> 4);
+  old = data;
+
   MSM5205_reset_w(0, GET_BIT0);
+  if (GET_BIT0) {
+    sndlocals.fifoSize = 0;
+    z80ctc_0_trg3_w(0, sndlocals.trg3);
+  }
   if (GET_BIT4) sndlocals.clockDiv = 4; // 250 kHz
   if (GET_BIT5) sndlocals.clockDiv = 2; // 500 kHz
   if (GET_BIT6) sndlocals.clockDiv = 1; // 1 MHz
@@ -146,39 +170,29 @@ struct AY8910interface zsu_8910Int = {
   { ay8910_0_a_w, ay8910_1_a_w }
 };
 
-static void zsu_msmIrq(int data) {
-  static int intr;
-  MSM5205_data_w(0, intr ? sndlocals.msmData & 0x0f : sndlocals.msmData >> 4);
-  intr = !intr;
-}
-
 static struct MSM5205interface zsu_msm5205Int = {
   1,
-  500000,
-  {zsu_msmIrq},
-  {MSM5205_S48_4B},
-  {100}
+  0, //500000, // connected but not needed because VCLK pin is being used, saves a timer
+  {NULL},
+  {MSM5205_SEX_4B},
+  {50}
 };
 
-static WRITE_HANDLER(msm_w) {
-  logerror("MSM:%02x\n", data);
-  sndlocals.msmData = data;
+static WRITE_HANDLER(fifo_w) {
+  shi(data);
+  z80ctc_0_trg3_w(0, 1);
 }
 
 static READ_HANDLER(snd_r) {
-  logerror("<-- SND READ %02x %02x\n", sndlocals.sndCmd, sndlocals.vector);
-  sndlocals.irqs[2] = 0;
   cpu_set_irq_line(1, 0, CLEAR_LINE);
   return sndlocals.sndCmd;
 }
 
 static WRITE_HANDLER(ay0_w) {
-  logerror("AY0:%04x:%x:%02x\n", activecpu_get_previouspc(), offset, data);
   AY8910Write(0, offset % 2, data);
 }
 
 static WRITE_HANDLER(ay1_w) {
-  logerror("AY1:%04x:%x:%02x\n", activecpu_get_previouspc(), offset, data);
   AY8910Write(1, offset % 2, data);
 }
 
@@ -202,7 +216,7 @@ MEMORY_END
 static PORT_WRITE_START(zsu_writeport)
   {0x00, 0x03, z80ctc_0_w},
   {0x04, 0x07, z80ctc_1_w},
-  {0x08, 0x08, msm_w},
+  {0x08, 0x08, fifo_w},
   {0x0c, 0x0d, ay0_w},
   {0x10, 0x11, ay1_w},
 MEMORY_END
