@@ -438,7 +438,7 @@ INITGAME4(ridersrf, play_disp7, 1)
 ROM_START(ridersrf)
   NORMALREGION(0x10000, REGION_CPU1)
     ROM_LOAD("cpu.bin", 0x0000, 0x2000, CRC(4941938e) SHA1(01e44054e65166d68602d6a38217eda7ea669761))
-  NORMALREGION(0x10000, REGION_CPU2)
+  SOUNDREGION(0x10000, REGION_CPU2)
     ROM_LOAD("sound.bin", 0x0000, 0x2000, CRC(2db2ecb2) SHA1(365fcac208607acc3e134affeababd6c89dbc74d))
 ROM_END
 CORE_GAMEDEFNV(ridersrf,"Rider's Surf",1986,"JocMatic",gl_mPLAYMATIC4,0)
@@ -450,7 +450,7 @@ INITGAME4(ironball, play_disp7, 1)
 ROM_START(ironball)
   NORMALREGION(0x10000, REGION_CPU1)
     ROM_LOAD("video.bin", 0x0000, 0x2000, CRC(1867ebff) SHA1(485e46c742d914febcbdd58cb5a886f1d773282a))
-  NORMALREGION(0x10000, REGION_CPU2)
+  SOUNDREGION(0x10000, REGION_CPU2)
     ROM_LOAD("sound.bin", 0x0000, 0x2000, CRC(83165483) SHA1(5076e5e836105d69c4ba606d8b995ecb16f88504))
 ROM_END
 CORE_GAMEDEFNV(ironball,"Iron Balls",1987,"Stargame",gl_mPLAYMATIC4,0)
@@ -468,9 +468,9 @@ core_tLCDLayout dispSM[] = {
 };
 INITGAME5(terrlake, dispSM, 1)
 PLAYMATIC_ROMSTART64(terrlake,"jtl_2a3.u9", CRC(f6d3cedd) SHA1(31e0daac1e9215ad0e1557d31d520745ead0f396))
-NORMALREGION(0x10000, REGION_CPU2)
+SOUNDREGION(0x10000, REGION_CPU2)
   ROM_LOAD("stl_1a0.u3", 0x0000, 0x8000, CRC(b5afdc39) SHA1(fb74de453dfc66b87f3d64508802b3de46d14631))
-NORMALREGION(0x20000, REGION_SOUND1)
-  ROM_LOAD("stl_1b0.u4", 0x0000, 0x8000, CRC(3bbdd791) SHA1(68cd86cb96a278538d18ca0a77b372309829edf4))
+SOUNDREGION(0x20000, REGION_USER1)
+  ROM_LOAD("stl_1b0.u4", 0x00000, 0x8000, CRC(3bbdd791) SHA1(68cd86cb96a278538d18ca0a77b372309829edf4))
 PLAYMATIC_ROMEND
 CORE_GAMEDEFNV(terrlake,"Terrific Lake",1987,"Sport Matic",gl_mPLAYMATIC4SZSU,GAME_STATUS)
