@@ -9,6 +9,7 @@ Version 3.3 (X X, 2019) - ""
 *** CORE/CPU ***
 Wico's Af-Tor fully working now
 Sped up Video Dens games, found more dip switches, switch test, saving NVRAM
+E.F.O. sound board mostly working - speech output would still stall the board for now however
 Sound support for early LTD system III
 More sound found for LTD system 4, extra lamp data is handled by sound chip port write!
 More solenoids found for LTD's Force & Haunted Hotel
